force-app/main/default/objects/Order_Item__c/fields/Price_List_Item__c.field-meta.xml
<CustomField>
    <fullName>Price_List_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Price List Item</label>
    <referenceTo>Price_List_Item__c</referenceTo>
    <relationshipLabel>&lt;Order Items</relationshipLabel>
    <relationshipName>Order_Items</relationshipName>
    <type>Lookup</type>
</CustomField>