force-app/main/default/objects/Order_Item__c/fields/ProductName__c.field-meta.xml
<CustomField>
    <fullName>ProductName__c</fullName>
    <formula>Price_List_Item__r.Produkt__r.Name</formula>
    <label>ProductName</label>
    <type>Text</type>
</CustomField>