force-app/main/default/objects/Order_Item__c/fields/Produkt__c.field-meta.xml
<CustomField>
    <fullName>Produkt__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Produkt</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>&lt;Order Items</relationshipLabel>
    <relationshipName>Order_Items</relationshipName>
    <type>Lookup</type>
</CustomField>