force-app/main/default/objects/Order_Item__c/fields/Rate_Code__c.field-meta.xml
<CustomField>
    <fullName>Rate_Code__c</fullName>
    <formula>Price_List_Item__r.Rate_Code__c</formula>
    <label>Rate Code</label>
    <type>Text</type>
</CustomField>