force-app/main/default/objects/Order_Item__c/fields/Sales_Order__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Sales Order</label>
    <referenceTo>Sales_Order__c</referenceTo>
    <relationshipLabel>&lt;Order Items</relationshipLabel>
    <relationshipName>Order_Items</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>