force-app/main/default/objects/Order_Item__c/fields/Service_Cost__c.field-meta.xml
<CustomField>
    <fullName>Service_Cost__c</fullName>
    <formula>Price_List_Item__r.Price__c</formula>
    <label>Service Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>